[WIP] Fixed some styles for alignment in editor

--- a/src/wpzoom-blocks/recipe-card/editor.scss
+++ b/src/wpzoom-blocks/recipe-card/editor.scss
@@ -168,16 +168,6 @@
 		}
 	}
 
-	&.block-alignment-right {
- 		.ingredients-list {
- 			> li {
- 				.ingredient-item-name {
- 					padding-right: 0 !important;
- 				}
- 			}
- 		}
- 	}
-
 	// this is used to prevent floating elements on editing
 	&.is-style-newdesign,
 	&.is-style-accent-color-header {
@@ -196,6 +186,16 @@
 		.recipe-card-summary {
 			margin-top: 0;
 		}
+		&.block-alignment-right {
+	 		.ingredients-list {
+	 			> li {
+	 				.ingredient-item-name {
+	 					padding-left: 0 !important;
+	 					padding-right: 30px;
+	 				}
+	 			}
+	 		}
+	 	}
 	}
 	&.is-style-accent-color-header {
 		.ingredients-list > li {
@@ -664,5 +664,8 @@
 			height: 100%;
 			line-height: 0;
 		}
+	}
+	.components-button-group {
+		display: block;
 	}
 }
